<resources>
    <string name="app_name">WorldSkills</string>
    <string name="events">Events</string>
    <string name="todo">TODO</string>
    <string name="home">Home</string>
    <string name="tickets">Tickets</string>
    <string name="records">Records</string>
    <string name="create_ticket">Create a new ticket</string>
    <string name="ticket_create">Ticket Create</string>
    <string name="input_your_name">Input your name</string>
    <string name="ticket_image">Ticket Image</string>
    <string name="ticket_name">Ticket Name</string>
    <string name="events_text">Эвенты</string>
</resources>