<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <ImageView
        android:id="@+id/ticket_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/ticket_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ticket_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ticket_name"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:layout_marginStart="80dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@id/ticket_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/event_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/events_text"
        android:textSize="16sp"
        android:textColor="@android:color/darker_gray"
        android:layout_marginStart="80dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@id/ticket_image"
        app:layout_constraintTop_toBottomOf="@id/ticket_name" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/event_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
